--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "common-gateway/pet-store-bundle",
-    "description": "An example package for creating symfony flex bundles as plugins",
+    "name": "common-gateway/referentielijsten-bundle",
+    "description": "This repository is a PHP Symfony flex bundles for ZGW Referentielijsten https://redocly.github.io/redoc/?url=https://raw.githubusercontent.com/VNG-Realisatie/VNG-referentielijsten/master/src/openapi.yaml\\&nocors#section/Selectielijst",
     "type": "symfony-bundle",
     "keywords": [
         "commongateway",
@@ -9,21 +9,22 @@
         "conduction",
         "symfony",
         "common-gateway-plugin",
-        "pet store"
+        "zgw",
+        "referentielijsten"
     ],
     "homepage": "https://commongateway.nl",
     "license": "EUPL-1.2",
     "minimum-stability": "dev",
     "require": {
         "php": ">=7.4",
-        "commongateway/corebundle": "^1.0.51"
+        "commongateway/corebundle": "^1.0.60"
     },
     "require-dev": {
         "symfony/dependency-injection": "~3.4|~4.1|~5.0"
     },
     "autoload": {
         "psr-4": {
-            "CommonGateway\\PetStoreBundle\\": "src/"
+            "CommonGateway\\ReferentielijstenBundle\\": "src/"
         }
     }
 }
