--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     "minimum-stability": "dev",
     "require": {
         "php": ">=7.4",
-        "commongateway/corebundle": "^1.1.110 | dev-feature/GW-1596/Symfony54 | dev-feature/GW-1595/Symfony64"
+        "commongateway/corebundle": "^1.1.110 | <2.0"
     },
     "require-dev": {
         "symfony/dependency-injection": "~3.4|~4.1|~5.0"
